force-app/main/default/objects/QB_MetaData__c/QB_MetaData__c.object-meta.xml
<CustomObject>
    <label>QB MetaData</label>
    <nameField>
        <label>QB MetaData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB MetaDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>