force-app/main/default/objects/QB_MetaData__c/fields/QB_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Id__c</fullName>
    <label>QB Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>